--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-node_modules
-dist
+# Logs
+*.log
 
+# Runtime data
+tmp
+#.fontcustom-manifest.json
+
+package-lock.json
+
+.DS_Store
+Thumbs.db
+#db.json
+*.log
+node_modules/
+public/
+.deploy*/
+dist/
